--- a/src/Contato.css
+++ b/src/Contato.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    overflow: hidden;
+
 }
 
 
@@ -15,10 +15,11 @@
     width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
+
 
 .contatoImagem {
     position: relative;
@@ -59,6 +60,27 @@
     color: #541084 !important;
     font-size: 25px;
     width: 40vw;
+
+}
+
+@media (min-width: 600px) {
+    .contatoH1 {
+
+        width: auto;
+
+    }
+}
+
+.contatoH2 {
+    color: #541084 !important;
+
+    width: auto;
+    padding: 1rem;
+    font-size: 1.2rem;
+    padding: 0 !important;
+    padding-inline: 3rem !important;
+    line-height: 30px !important;
+    align-self: center !important;
 
 }
 
@@ -142,9 +164,41 @@
     font-family: 'Rubik', sans-serif;
 }
 
+@media (min-width: 600px) {
+    .contatoInput {
+        margin-inline: 0;
+        padding-left: 1rem;
+        border: 1px solid rgba(92, 92, 92, 0.438);
+        opacity: 0.8;
+        background-color: whitesmoke;
+        width: 50%;
+        align-self: left;
+    }
+
+    .contatoTextarea {
+        width: 100%;
+        border: 1px solid rgba(92, 92, 92, 0.438);
+        opacity: 0.8;
+        background-color: whitesmoke;
+        width: 50%;
+    }
+
+    .contatoSubmit {
+        align-self: flex-start;
+        font-size: 24px;
+        padding: 5px 15px;
+    }
+}
+
+
+
+
+
 .divColumn {
     display: flex;
     flex-direction: column;
+    width: 100%;
+    padding-inline: 15rem;
 }
 
 .contatoInfoContainer {
@@ -263,6 +317,7 @@
         font-size: 1.2rem;
         padding: 0 !important;
         padding-inline: 3rem !important;
+        line-height: 30px !important;
     }
 
     .contatoForm {
@@ -302,7 +357,9 @@
     }
 
     .divColumn {
-        /* Seus estilos aqui */
+        align-items: center;
+        justify-content: center;
+        width: 100%;
     }
 
     .contatoInfoContainer {
@@ -369,12 +426,10 @@
     height: 4rem;
     margin: 2rem;
     background-color: #D9D9D9;
-    margin-top: 7rem;
+
 }
 
-.containerPropaganda.playing {
-    margin-top: 15rem;
-}
+.containerPropaganda.playing {}
 
 .box {
     width: 100%;
@@ -418,14 +473,6 @@
     padding: 2rem;
 }
 
-.footerDivColumnContato {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: #541084;
-
-}
-
 .footerDivColumnContato svg {
     font-size: 1.1rem;
 
@@ -455,4 +502,127 @@
     height: 1.2rem;
     margin: 0;
     padding: 0;
+}
+
+@media (min-width: 600px) {
+    .footerDivRowContato {
+        padding-inline: 20rem;
+        height: 15rem;
+    }
+
+    .footerDivColumnContato svg {
+        font-size: 4.1rem;
+
+    }
+
+    .text-wrapper {
+        font-weight: 700;
+        font-size: 1.8rem;
+    }
+
+    .span {
+        font-family: "Rubik-Medium", Helvetica;
+        font-weight: 400;
+        font-size: 1.8rem;
+    }
+
+    .footerSocialmediaContainer {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        padding-inline: 15rem;
+        height: 15rem;
+    }
+
+    .footerSocialmediaContainer img {
+        width: auto;
+        height: 2.8rem;
+        margin: 0;
+        padding: 0;
+    }
+
+    .footerSocialmediaContainer svg {
+        width: 55px;
+        height: 55px;
+    }
+
+    .contactPage {
+        background-color: white;
+        justify-content: space-between;
+        padding-inline: 9rem;
+        background-image: none;
+    }
+
+    .containerPropaganda {
+        width: 84%;
+        height: 16rem;
+        margin: 2rem;
+        background-color: #D9D9D9;
+        margin-top: 7rem;
+    }
+}
+
+.footerDivColumnContato {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #541084;
+
+}
+
+
+
+
+.select-container::after {
+    content: "\25BC";
+    position: absolute;
+    top: -7%;
+    right: 0;
+    padding: 10px;
+    pointer-events: none;
+    user-select: none;
+    color: white;
+}
+
+
+@media (max-width: 600px) {
+    .select-container::after {
+        content: "\25BC";
+        position: absolute;
+        top: 5%;
+        right: -4%;
+        padding: 10px;
+        pointer-events: none;
+        user-select: none;
+        color: white;
+    }
+
+    .divColumn {
+        display: flex;
+        flex-direction: column;
+        padding-inline: 0rem;
+    }
+}
+
+.contatoH2 {
+
+    margin-top: 7rem;
+}
+
+.contatoH2.playing {
+    margin-top: 10rem;
+}
+
+.whiteLineContato {
+    background-color: var(--cor-primaria);
+    margin-top: 6px;
+    /* margin-bottom: 1.56rem; */
+    height: 3px;
+    width: 6%;
+}
+
+.select-container {
+    position: relative;
+    display: inline-block;
 }
