--- a/src/Drops.css
+++ b/src/Drops.css
@@ -115,3 +115,110 @@ h5 {
     background-color: #7d33a6;
     /* Cor de fundo roxa mais clara ao passar o mouse */
 }
+
+.dividerLine {
+    display: block;
+    /* Mostra o divisor por padrão */
+}
+
+.contentBackgroundDrops {
+    width: 100% ;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-inline: 2rem;
+    background: linear-gradient(0deg, #541084 0%, #FFC007 100%);
+}
+
+@media (min-width: 600px) {
+    .contentBackgroundDrops {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        padding-inline: 0rem;
+        background: transparent;
+        background-color: white;
+        overflow: hidden;
+    }
+
+    .dividerLine {
+        display: none;
+        /* Esconde o divisor quando a largura da tela é maior que 600px */
+    }
+}
+
+.news-grid {
+    margin-block: 5rem;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 6rem;
+}
+
+.news-card {
+    border: 1px solid rgb(204, 204, 204);
+    border-radius: 10px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+    z-index: 2;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.news-card::after {
+    content: "";
+    position: absolute;
+    bottom: 7%;
+    left: 0;
+    width: 100%;
+    height: 20%;
+    background-color: white;
+    border-top: 4px solid #ffc007;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    z-index: 1;
+}
+
+.news-card img {
+    width: 30rem;
+    height: 17rem;
+    object-fit: cover;
+}
+
+.news-card h2 {
+    margin: 0;
+    padding: 10px;
+    width: 30rem;
+    height: 3rem;
+    text-align: center;
+
+    font-family: 'Rubik', sans-serif;
+    z-index: 2;
+
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.news-card p {
+    width: auto;
+    background-color: #ffc007;
+    font-size: 14px;
+    padding: 2px 10px;
+    border-radius: 12px;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    -ms-border-radius: 12px;
+    -o-border-radius: 12px;
+    position: absolute;
+    bottom: 24%;
+    font-family: 'Rubik', sans-serif;
+    z-index: 2;
+
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
