--- a/src/Sobre.css
+++ b/src/Sobre.css
@@ -12,9 +12,10 @@
     color: var(--cor-terciaria);
     font-size: 2rem;
     padding-block: 2rem;
+
     letter-spacing: -0.58px;
     font-weight: 200;
-    line-height: 27px;
+    line-height: 50px;
 
 }
 
@@ -32,7 +33,7 @@
     color: var(--cor-terciaria);
     font-size: 2rem;
 
-    padding-top: 2rem;
+    padding-top: 6rem;
     font-weight: 200;
     align-self: flex-start;
 }
@@ -68,7 +69,8 @@
     color: white;
     width: 150px;
     height: 100px;
-    margin-right: 2rem;
+    margin-right: 6rem;
+    margin-top: 10rem;
 }
 
 .posicaoAbsolutaDireita1 {
@@ -82,19 +84,61 @@
 
 .contatoContainer.primary {
     background-color: var(--cor-primaria);
+    height: 100vh;
+    overflow: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
     /* substitua #corPrimaria pela cor primária do seu tema */
 }
 
+.boxMapPropaganda4 {
+    background-color: #D9D9D9;
+    width: 20rem;
+    height: 3rem;
+    margin-block: 4vw;
+}
+
 @media (max-width: 600px) {
-    .contatoContainer {}
+    .caretCircleLeftStyle1 {
+        color: white;
+        width: 150px;
+        height: 100px;
+        margin-right: 2rem;
+    }
+
+    .contatoContainer.primary {
+        background-color: var(--cor-primaria);
+        height: 115vh;
+        overflow: none;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        /* substitua #corPrimaria pela cor primária do seu tema */
+    }
+
+    .contatoContainer {
+        background-color: var(--cor-primaria);
+        height: 200vw;
+        overflow: none;
+    }
+
+    .boxMapPropaganda4 {
+        background-color: #D9D9D9;
+        width: 20rem;
+        height: 3rem;
+        margin-block: 8vw;
+    }
 
     .contatoContainer h1 {
         color: var(--cor-terciaria);
         font-size: 1rem;
- 
+
     }
 
-   
+
 
     .caretCircleLeftStyle1 {
         color: white;
