--- a/src/Drops.css
+++ b/src/Drops.css
@@ -122,7 +122,7 @@ h5 {
 }
 
 .contentBackgroundDrops {
-    width: 100% ;
+    width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -171,7 +171,7 @@ h5 {
 .news-card::after {
     content: "";
     position: absolute;
-    bottom: 7%;
+    bottom: 4%;
     left: 0;
     width: 100%;
     height: 20%;
@@ -190,14 +190,14 @@ h5 {
 
 .news-card h2 {
     margin: 0;
-    padding: 10px;
+    padding: 5px;
     width: 30rem;
     height: 3rem;
     text-align: center;
-
+    color: #541084;
     font-family: 'Rubik', sans-serif;
     z-index: 2;
-
+    margin-bottom: 18px !important;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -206,6 +206,7 @@ h5 {
 .news-card p {
     width: auto;
     background-color: #ffc007;
+    color: #541084;
     font-size: 14px;
     padding: 2px 10px;
     border-radius: 12px;
@@ -214,7 +215,7 @@ h5 {
     -ms-border-radius: 12px;
     -o-border-radius: 12px;
     position: absolute;
-    bottom: 24%;
+    bottom: 21%;
     font-family: 'Rubik', sans-serif;
     z-index: 2;
 
