--- a/src/NoticiaDetalhe.css
+++ b/src/NoticiaDetalhe.css
@@ -490,15 +490,16 @@ a {
     flex-direction: column;
 
     width: 20vw;
-    /* padding: 0 20px;
-    padding-left: 7.8125rem */
-    padding-inline: 30rem;
+    padding-left: 19rem
+        /* padding: 0 20px;
+   
+    /* padding-inline: 19rem; */
 }
 
 .noticiasContainer img {
     border-radius: 10px;
     height: 32rem;
-    width: 60rem;
+    width: auto;
     margin-bottom: 1rem;
     object-fit: cover;
     /* align-self: center; */
@@ -649,6 +650,7 @@ h3 {
     font-weight: 200;
     margin-block: 0.2vw;
     margin-left: 0.5vw;
+    width: 100%;
 }
 
 .meu-conteudo {
@@ -691,7 +693,7 @@ h3 {
 }
 
 .meu-conteudo p {
-
+    width: 100%;
     color: #2B2B2B;
     font-family: 'Rubik', sans-serif;
     letter-spacing: -0.6px;
@@ -1515,7 +1517,7 @@ svg.newsPageIcon {
     flex: 1;
     /* Adicione esta linha */
     width: 100%;
-    padding-left: 6rem;
+
     display: none;
     flex-direction: column;
 }
@@ -1538,9 +1540,10 @@ svg.newsPageIcon {
         /* Cor cinza */
         border-radius: 10px;
         margin-top: 3rem;
-        margin-right: 12rem;
+        margin-inline: auto;
         /* Bordas arredondadas */
-        width: 88%;
+        width: 64%;
+
         /* Largura do bloco */
         height: 39rem;
 
@@ -1558,7 +1561,8 @@ svg.newsPageIcon {
         /* Cor cinza */
         border-radius: 10px;
         /* Bordas arredondadas */
-        width: 88%;
+        width: 64%;
+        margin-inline: auto;
         /* Largura do bloco */
         height: 16rem;
         /* Altura do bloco */
@@ -1665,5 +1669,40 @@ svg.newsPageIcon {
         justify-content: center;
         /* margin-left: 3.5rem; */
         /* Alinha o conteúdo à esquerda */
+    }
+}
+
+.footerImage5 {
+    height: auto;
+    margin: 0px;
+    object-fit: cover;
+    width: 10rem;
+    align-self: flex-end;
+}
+
+.footerText1 {
+    color: #ffffff;
+    font-family: 'Rubik', sans-serif;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 200;
+    line-height: normal;
+    margin-top: 2vw;
+    margin-bottom: 10px;
+
+    z-index: 5;
+    text-align: right;
+}
+
+@media (max-width: 600px) {
+    .footerText1 {
+        color: #ffffff;
+        font-family: 'Rubik', sans-serif;
+        font-size: 13px;
+        font-style: normal;
+        font-weight: 200;
+        line-height: normal;
+        margin-block: 1vw;
+        z-index: 5;
     }
 }
