--- a/src/Programacao.css
+++ b/src/Programacao.css
@@ -104,7 +104,7 @@ select option:disabled {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-
+    border-radius: 12px;
     padding-top: 1rem;
     background-color: #FFC007;
     line-height: normal;
@@ -561,4 +561,23 @@ select option:disabled {
 
 .program-transition {
     transition: opacity 0.5s ease-in-out;
+}
+
+.programacao-expanded-row.home {
+    background-color: #541084;
+}
+
+.programacao-imagem.home {
+    background-color: #541084;
+}
+
+.programacao-expanded-titulo.home {
+    background-color: #541084;
+}
+
+.programacao-expanded-titulo.home h1,
+.programacao-expanded-titulo.home span,
+.programacao-expanded-titulo.home p {
+    background-color: #541084;
+    color: white;
 }
